# aoc-2023

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  sqitch.conf
day/: __init__.py
day/.template/: solve.py
schema/: sqitch.plan
schema/deploy/: day1-part1.sql  day1-part2.sql  day2-part1.sql  day3-part1.sql  day3-part2.sql  day4-part1.sql  day5-part1.sql  day7-part1.sql  day7-part2.sql  init.sql  util.sql
schema/revert/: day1-part1.sql  day1-part2.sql  day2-part1.sql  day3-part1.sql  day3-part2.sql  day4-part1.sql  day5-part1.sql  day7-part1.sql  day7-part2.sql  init.sql  util.sql
schema/verify/: day1-part1.sql  day1-part2.sql  day2-part1.sql  day3-part1.sql  day3-part2.sql  day4-part1.sql  day5-part1.sql  day7-part1.sql  day7-part2.sql  init.sql  util.sql
src/aoc/: read.py
src/aoc/day/.template/: solve.py
src/aoc/day/1/: puzzle.md  solve.py
src/aoc/day/2/: solve.py
src/aoc/day/3/: puzzle.md  solve.py
src/aoc/day/4/: puzzle.md  solve.py
src/aoc/day/7/: puzzle.md  solve.py
src/aoc/repository/: repository.py
src/aoc/repository/queries/calibration_attempt/: solve.sql
src/aoc/repository/queries/camel_card_game/: solve.sql
src/aoc/repository/queries/cube_game_series/: solve.sql
src/aoc/repository/queries/engine_matrix/: solve.sql
src/aoc/repository/queries/scratch_off/: solve.sql
tests/: conftest.py
tests/functional/: conftest.py
tests/functional/repository/: test_repository.py
